open in new tab

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <h2>Marceline's "Friends""</h2>
       <p>Although Marceline is a good friend of Princess Bubblegum, Finn the Human and Jake the Dog, her closest friend is Simon or the Ice King. She also has many enemies as a result of her cool attitude. Click on the links below to read more about them.</p>
       <ul>
-        <li><a href="https://adventuretime.fandom.com/wiki/Princess_Bubblegum">Princess Bubblegum</a></li>
-        <li><a href="https://adventuretime.fandom.com/wiki/Jake">Jake the Dog</a></li>
-        <li><a href="https://adventuretime.fandom.com/wiki/Finn">Finn the Human</a></li>
-        <li><a href="https://adventuretime.fandom.com/wiki/Ice_King">Ice King</a></li>
+        <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Princess_Bubblegum">Princess Bubblegum</a></li>
+        <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Jake">Jake the Dog</a></li>
+        <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Finn">Finn the Human</a></li>
+        <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Ice_King">Ice King</a></li>
       </ul>
     </main>
 
