--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="icon" href="img/marceline-icon.jpg">
     <meta charset="utf-8">
     <title>MARCEY</title>
   </head>
