--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="icon" href="img/marceline-icon.jpg">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>MARCEY</title>
   </head>
   <body>
     <!-- Header Element -->
     <header>
-        <img src="img/marceline-round.jpg" alt="">
-        <h1> Marceline The Vampire Queen</h1>
+        <img src="img/marceline-round.jpeg" alt="">
+        <h1> MARCELINE <br>THE VAMPIRE QUEEN</h1>
     </header>
 
     <!-- MAIN ELEMENT -->
@@ -17,7 +19,7 @@
       <h2>About Marceline</h2>
       <p>Marceline is a half-demon, half vampire queen. She loves red and hambo.</p>
       <img src="img/marceline-finn.png" alt="">
-      <p>Marceline and her friend, Finn</p>
+      <p class="caption">Marceline and her friend, Finn</p>
 
       <h2>Marceline's Characteristics</h2>
       <ol>
@@ -35,6 +37,7 @@
         <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Finn">Finn the Human</a></li>
         <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Ice_King">Ice King</a></li>
       </ul>
+
     </main>
 
     <!-- FOOTER ELEMENT -->
