--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>She was un-vampirised for a while.</li>
       </ol>
 
-      <h2>Marceline's "Friends""</h2>
+      <h2>Marceline's "Friends"</h2>
       <p>Although Marceline is a good friend of Princess Bubblegum, Finn the Human and Jake the Dog, her closest friend is Simon or the Ice King. She also has many enemies as a result of her cool attitude. Click on the links below to read more about them.</p>
       <ul>
         <li><a target="_blank" href="https://adventuretime.fandom.com/wiki/Princess_Bubblegum">Princess Bubblegum</a></li>
